--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
             <!-- Page Header -->
             <div class="page-header"><h1 v-text="$route.title"></h1></div>
             <!-- Message Box -->
-            <!--<app-msgbox></app-msgbox>-->
+            <app-msgbox></app-msgbox>
             <!-- Page Content -->
-            <!--<div id="page_content"><component :is="page"></component></div>-->
-            <!-- use router-view element as route outlet -->
             <div id="page_content"><router-view></router-view></div>
             <!-- Footer Menu -->
             <app-footer-menu></app-footer-menu>
