--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Page Content -->
             <div id="page_content"><router-view></router-view></div>
             <!-- Footer Menu -->
-            <app-footer-menu></app-footer-menu>
+            <app-footer-menu :locale="locale"></app-footer-menu>
             <!-- Footer Privacy -->
             <app-footer-privacy></app-footer-privacy>
         </div>
